--- a/Drawing/Drawing/Base.lproj/Main.storyboard
+++ b/Drawing/Drawing/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -49,12 +49,12 @@
                                 <rect key="frame" x="334" y="512" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="7gB-ub-ljq"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="PUc-72-EtN"/>
+                                    <constraint firstAttribute="width" constant="50" id="PUc-72-EtN"/>
                                     <constraint firstAttribute="width" constant="50" id="sGS-hg-vgk"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="sKf-GZ-qQd"/>
+                                    <constraint firstAttribute="height" constant="50" id="sKf-GZ-qQd"/>
                                 </constraints>
                                 <connections>
-                                    <action selector="eraseAll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dap-vo-F1N"/>
+                                    <action selector="eraseLast:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dn9-5L-R7W"/>
                                 </connections>
                             </button>
                         </subviews>
