--- a/NavigationAnimation/NavigationAnimation/Base.lproj/Main.storyboard
+++ b/NavigationAnimation/NavigationAnimation/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                 </state>
                                 <connections>
                                     <action selector="openSecondScreen:" destination="ilJ-CC-G9D" eventType="touchUpInside" id="cUp-rq-Fw3"/>
-                                    <segue destination="0cm-cj-URe" kind="presentation" identifier="PhotoDetail" customClass="FadeInSegue" customModule="NavigationAnimation" customModuleProvider="target" id="J4i-of-6MR"/>
+                                    <segue destination="0cm-cj-URe" kind="presentation" identifier="fadeIn" customClass="FadeInSegue" customModule="NavigationAnimation" customModuleProvider="target" modalPresentationStyle="fullScreen" id="J4i-of-6MR"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -45,18 +45,18 @@
                 <exit id="ilJ-CC-G9D" userLabel="Exit" sceneMemberID="exit"/>
                 <swipeGestureRecognizer direction="up" id="wzX-g8-66j">
                     <connections>
-                        <segue destination="LCM-0r-6Yw" kind="show" identifier="thirdScreen" customClass="FadeInSegue" customModule="NavigationAnimation" customModuleProvider="target" id="Vn8-vn-ppB"/>
+                        <segue destination="LCM-0r-6Yw" kind="presentation" identifier="swipeToBottom" customClass="SwipeToTopSegue" customModule="NavigationAnimation" customModuleProvider="target" modalPresentationStyle="fullScreen" id="Vn8-vn-ppB"/>
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="283.92857142857139"/>
         </scene>
-        <!--View Controller-->
+        <!--Third View Controller-->
         <scene sceneID="HWp-ax-Zv1">
             <objects>
-                <viewController id="LCM-0r-6Yw" sceneMemberID="viewController">
+                <viewController id="LCM-0r-6Yw" customClass="ThirdViewController" customModule="NavigationAnimation" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="umN-57-fLh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="Bx9-er-Btx"/>
                         <color key="backgroundColor" systemColor="systemYellowColor"/>
@@ -70,18 +70,18 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ddg-eq-j04" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <swipeGestureRecognizer direction="down" id="0oA-qX-WCx">
                     <connections>
-                        <segue destination="KjN-Ta-owd" kind="custom" identifier="showFirst" customClass="FadeInSegue" customModule="NavigationAnimation" customModuleProvider="target" id="ISb-c8-E5H"/>
+                        <segue destination="KjN-Ta-owd" kind="presentation" identifier="swipeToTop" customClass="SwipeToBottom" customModule="NavigationAnimation" customModuleProvider="target" modalPresentationStyle="fullScreen" id="Bb5-Wm-s45"/>
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-778" y="989"/>
         </scene>
-        <!--View Controller-->
+        <!--Second View Controller-->
         <scene sceneID="fqt-go-7LY">
             <objects>
-                <viewController id="0cm-cj-URe" sceneMemberID="viewController">
+                <viewController id="0cm-cj-URe" customClass="SecondViewController" customModule="NavigationAnimation" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ex0-l6-2RR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="uTI-zc-UrP"/>
                         <color key="backgroundColor" systemColor="systemTealColor"/>
@@ -95,7 +95,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zrI-de-kOv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="f5P-mz-4gh">
                     <connections>
-                        <segue destination="KjN-Ta-owd" kind="custom" identifier="fadeFirst" customClass="FadeInSegue" customModule="NavigationAnimation" customModuleProvider="target" id="qGk-UD-nzC"/>
+                        <segue destination="KjN-Ta-owd" kind="custom" identifier="fadeOut" customClass="FadeInSegue" customModule="NavigationAnimation" customModuleProvider="target" id="qGk-UD-nzC"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
@@ -121,7 +121,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="ISb-c8-E5H"/>
+        <segue reference="qGk-UD-nzC"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemGreenColor">
