--- a/Collection/Collection/Base.lproj/Main.storyboard
+++ b/Collection/Collection/Base.lproj/Main.storyboard
@@ -8,24 +8,24 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--Rectangles-->
         <scene sceneID="JMM-lb-AFa">
             <objects>
                 <collectionViewController id="F6l-pb-JzV" customClass="ViewController" customModule="Collection" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="vS3-rE-bUT">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="vS3-rE-bUT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <inset key="scrollIndicatorInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                        <inset key="scrollIndicatorInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oUX-MZ-pQ2">
                             <size key="itemSize" width="128" height="128"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                            <inset key="sectionInset" minX="20" minY="10" maxX="20" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RectangleCollectionViewCell" id="bqy-bE-xXs" customClass="RectangleCollectionViewCell" customModule="Collection" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="128" height="128"/>
+                                <rect key="frame" x="20" y="10" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="KYQ-gj-6aI">
                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -39,7 +39,7 @@
                             <outlet property="delegate" destination="F6l-pb-JzV" id="SVG-YG-4fM"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Title" id="iOE-Gz-7vg"/>
+                    <navigationItem key="navigationItem" title="Rectangles" id="iOE-Gz-7vg"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XSy-Bo-7dy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
